# converge

./: .gitattributes  .gitignore  DESIGN.md  NOTES.md  README.md  TODO.md  ci.nix  converge.cabal  default.nix
.buildkite/: pipeline.yml
app/: Main.hs
nix/: nixpkgs.nix
nix/haskell-packages/: converge.nix  default.nix  fused-effects.nix  github-webhooks.nix  github.nix  polysemy-plugin.nix  polysemy.nix  relude.nix  relude.patch  servant-github-webhook.nix  string-interpolate.nix
nix/patches/: servant-github-webhook.patch
prelude/: Prelude.hs
src/: Converge.hs
src/Control/Carrier/: Bread.hs
src/Control/Carrier/GitHub/: IssueComments.hs
src/Control/Carrier/GitHub/IssueComments/: IO.hs
src/Control/Carrier/GitHub/PullRequestComments/: IO.hs
src/Control/Carrier/Log/: IO.hs
src/Control/Effect/: Bread.hs  Log.hs
src/Control/Effect/GitHub/: IssueComments.hs  PullRequestComments.hs
src/Converge/: Api.hs  Git.hs  State.hs
src/Converge/Git/: Internal.hs
src/Effect/: Log.hs
src/Effect/GitHub/: IssueComments.hs  IssueLabels.hs  PullRequestComments.hs  PullRequestReviews.hs  PullRequests.hs
src/GitHub/Carrier/Issue/Comments/: IO.hs  Pure.hs
src/GitHub/Carrier/IssueComments/: IO.hs  Pure.hs
src/GitHub/Carrier/PullRequest/Comments/: IO.hs
src/GitHub/Carrier/PullRequestComments/: IO.hs
src/GitHub/Effect/: IssueComments.hs  PullRequestComments.hs
src/GitHub/Effect/Issue/: Comments.hs
src/GitHub/Effect/PullRequest/: Comments.hs
src/Polysemy/AtomicState/: Extra.hs
src/Polysemy/Input/: Extra.hs
src/Polysemy/Output/: Extra.hs
test/: Main.hs
