cabal-version: 2.2

name:        converge
version:     0.0.0.0
synopsis:    GitHub merge automation bot
description: GitHub merge automation bot
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/converge
license:     ISC
copyright:   2020 Evan Relf


common common
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Extra.Map)
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups


common execuable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Converge
    Converge.Api
    Effect.GitHub.IssueComments
    Effect.GitHub.PullRequestComments
    Effect.Log
    Polysemy.Input.Extra
    Polysemy.Output.Extra
  build-depends:
    , aeson
    , concurrency
    , generic-data
    , generic-optics
    , github
    , github-webhooks
    , optics
    , polysemy
    , polysemy-plugin
    , servant-github-webhook
    , servant-server
    , string-interpolate
    , text
    , time
    , vector
    , warp
  ghc-options:
    -fplugin=Polysemy.Plugin
    -O2
    -flate-specialise
    -fspecialise-aggressively


executable converge
  import: common, execuable
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    , converge


test-suite test
  import: common, execuable
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    , converge
