cabal-version: 2.2

name:        converge
version:     0.0.0.0
synopsis:    GitHub merge automation bot
description: GitHub merge automation bot
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/converge
license:     ISC
copyright:   2020 Evan Relf


common common
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Extra.Map)
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups


common polysemy-plugin
  build-depends:
    , polysemy-plugin
  ghc-options:
    -fplugin=Polysemy.Plugin
    -O2
    -flate-specialise
    -fspecialise-aggressively


common execuable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


library
  import: common, polysemy-plugin
  hs-source-dirs: src
  exposed-modules:
    Converge
    Converge.Api
    Converge.State
    Effect.GitHub.IssueComments
    Effect.GitHub.IssueLabels
    Effect.GitHub.PullRequestComments
    Effect.GitHub.PullRequestReviews
    Effect.GitHub.PullRequests
    Effect.Log
    Polysemy.AtomicState.Extra
    Polysemy.Input.Extra
    Polysemy.Output.Extra
  build-depends:
    , aeson
    , concurrency
    , generic-data
    , generic-optics
    , github
    , github-webhooks
    , optics
    , polysemy
    , servant-github-webhook
    , servant-server
    , stm
    , string-interpolate
    , text
    , time
    , vector
    , warp


executable converge
  import: common, execuable
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    , converge


test-suite test
  import: common, execuable
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    , converge
