cabal-version: 2.2

name:        converge
version:     0.0.0.0
synopsis:    GitHub merge automation bot
description: GitHub merge automation bot
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/converge
license:     ISC
copyright:   2020 Evan Relf


common common
  build-depends:
    , base   ^>= 4.12.0
    , relude ^>= 0.6.0
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups


common polysemy-plugin
  build-depends:
    , polysemy-plugin ^>= 0.2.5
  ghc-options:
    -fplugin=Polysemy.Plugin
    -O2
    -flate-specialise
    -fspecialise-aggressively


common execuable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


library
  import: common, polysemy-plugin
  hs-source-dirs: src
  exposed-modules:
    Converge
    Converge.Api
    Converge.Git
    Converge.State
    Effect.GitHub.IssueComments
    Effect.GitHub.IssueLabels
    Effect.GitHub.PullRequestComments
    Effect.GitHub.PullRequestReviews
    Effect.GitHub.PullRequests
    Effect.Log
    Polysemy.AtomicState.Extra
    Polysemy.Input.Extra
    Polysemy.Output.Extra
  build-depends:
    , aeson                  ^>= 1.4.6
    , concurrency            ^>= 1.7.0
    , generic-data           ^>= 0.7.0
    , generic-optics         ^>= 2.0.0
    , github                 ^>= 0.24
    , github-webhooks        ^>= 0.13.0
    , optics                 ^>= 0.2
    , polysemy               ^>= 1.3.0
    , process                ^>= 1.6.5
    , servant-github-webhook ^>= 0.4.2
    , servant-server         ^>= 0.16.2
    , stm                    ^>= 2.5.0
    , string-interpolate     ^>= 0.2.0
    , temporary              ^>= 1.3
    , text                   ^>= 1.2.3
    , time                   ^>= 1.8.0
    , vector                 ^>= 0.12.1
    , warp                   ^>= 3.3.5


executable converge
  import: common, execuable
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    , converge


test-suite test
  import: common, execuable
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    , converge
